[package]
name = "eskom_se_push-api"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ZimboPro/eskom-se-push-api"
description = "API Bindings to the Eskom-se-Push API"
homepage = "https://github.com/ZimboPro/eskom-se-push-api"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["eskom", "eskom-se-push", "se-push"]
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
bytes = "1.4.0"
chrono = { version = "0.4.23", features =["serde"] }
dotenv = "0.15.0"
http = "0.2.8"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.32"
url = "2.3.1"

[features]
default=["sync"]
async=[]
sync=[]

[package.metadata.docs.rs]
all-features = true
