[package]
name = "eskom_se_push-api"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/ZimboPro/eskom-se-push-api"
description = "API Bindings to the Eskom-se-Push API"
homepage = "https://github.com/ZimboPro/eskom-se-push-api"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["eskom", "eskom-se-push", "se-push"]
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.64", optional = true }
bytes = "1.4.0"
chrono = { version = "0.4.23", features =["serde"] }
derive_builder = "0.12.0"
dotenv = "0.15.0"
http = "0.2.8"
reqwest = { version = "0.11.13", features = ["blocking", "json"], optional = true }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.32"
ureq = { version = "2.6.2", features = ["gzip", "json"], optional = true }
url = "2.3.1"

[features]
default=["ureq",
"async",
"sync",
"reqwest",]
async=["async-trait"]
sync=[]
ureq=["dep:ureq"]
reqwest=["dep:reqwest"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "normal"
path = "examples/normal.rs"
features=["ureq"]

[[example]]
name = "normal_reqwest"
path = "examples/normal_reqwest.rs"
features=["sync", "reqwest"]

[[example]]
name = "reqwest_client"
path = "examples/reqwest_client.rs"
features=["sync", "reqwest"]

[[example]]
name = "get_status"
path = "examples/get_status.rs"
features=["ureq"]

[[example]]
name = "area_details"
path = "examples/area_details.rs"
features=["ureq"]

[[example]]
name = "area_search"
path = "examples/area_search.rs"
features=["ureq"]

[[example]]
name = "custom_env"
path = "examples/custom_env.rs"
features=["ureq"]

[[example]]
name = "ureq_client"
path = "examples/ureq_client.rs"
features=["ureq"]



